uso de tab en página de precios

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar C4</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar C4</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -92,7 +92,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar Gol</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Gol</a>
                     <!--ejemplo de botón usado antes <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar Gol</button>-->
                 </div> 
             </div>
@@ -112,7 +112,7 @@
                     <li class="card-text">dirección asistida</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar Kwid</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Kwid</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -128,7 +128,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar Creta</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Creta</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -144,7 +144,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar H1</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar H1</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -160,7 +160,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar Oroch</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Oroch</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -176,7 +176,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar Nivus</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Nivus</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -192,7 +192,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar A8</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar A8</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -208,7 +208,7 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar 118I</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar 118I</a>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -228,7 +228,7 @@
                     <li class="card-text">Techo corredizo</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="add-circle-sharp"></ion-icon>Reservar SLK 350</a>
+                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar SLK 350</a>
                 </div> 
             </div>
         </div>
