--- a/reserva.html
+++ b/reserva.html
@@ -82,7 +82,7 @@
                             <option>Río Negro</option>
                             <option>Rivera</option>
                             <option>Rocha</option>
-                            <option>Salo</option>
+                            <option>Salto</option>
                             <option>San José</option>
                             <option>Soriano</option>
                             <option>Tacuarembó</option>
@@ -121,7 +121,7 @@
                 <div class="form-group">
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="contactame">
-                    <label class="form-check-label" for="contactame">Quiero que me contacten</label>
+                    <label class="form-check-label" for="contactame">Estoy de acuerdo con los términos y condiciones</label>
                     </div>
                     
                 </div>
