agregué modal para registro, el html registro queda sin uso

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar C4</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar C4
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -120,8 +122,13 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Gol</a>
-                    <!--ejemplo de botón usado antes <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar Gol</button>-->
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar Gol
+                    </button>
+                    <!--ejemplo de botón usado antes:
+                         <button class="btn btn-primary btn-reserva" onclick="alert('reserva realizada')"/><ion-icon name="add-circle-sharp"></ion-icon> Reservar Gol</button>-->
+                    <!--ejemplo de botón usado antes para llevar a otro html:
+                        <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Gol</a>-->
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -140,7 +147,9 @@
                     <li class="card-text">dirección asistida</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Kwid</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar Kwid
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -156,7 +165,9 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Creta</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar Creta
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -172,7 +183,9 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar H1</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar H1
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -188,7 +201,9 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Oroch</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar Oroch
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -204,7 +219,9 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar Nivus</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar Nivus
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -220,7 +237,9 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar A8</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar A8
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -236,7 +255,9 @@
                     <li class="card-text">dirección hidráulica</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar 118I</a>
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reservar 118I
+                    </button>
                 </div> 
             </div>
             <div class="card border-primary car-alq d-flex flex-column justify-content-between">
@@ -256,11 +277,113 @@
                     <li class="card-text">Techo corredizo</li>
                 </div>
                 <div>
-                    <a href="/reserva.html" class="btn btn-primary btn-reserva" role="button"><ion-icon name="arrow-forward-circle"></ion-icon> Reservar SLK 350</a>
-                </div> 
+                    <button type="button" class="btn btn-primary btn-reserva" data-bs-toggle="modal" data-bs-target="#modalreservar">
+                        <ion-icon name="arrow-forward-circle"></ion-icon> Reserva SLK 350
+                    </button>
             </div>
         </div>
     </div>
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="modalreservar" tabindex="-1" aria-labelledby="modalreservarLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h2 class="modal-title fs-5" id="modalreservarLabel" style="color: rgb(100, 11, 41) ;">Reserva ahora</h2>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group row espacioregistro">
+                                    <div class="form-group col-sm-6">
+                                        <label for="nombre">Nombre</label>
+                                        <input type="text" class="form-control" id="nombre" placeholder="ingrese su nombre"> 
+                                    </div>
+                                    <div class="form-group col-sm-6">
+                                            <label for="apellido">Apellido</label>
+                                            <input type="text" class="form-control" id="apellido" placeholder="ingrese su Apellido"> 
+                                    </div>
+                                    <div class="form-group espacioregistro">
+                                        <label for="email">Email</label>
+                                        <input type="email" class="form-control" id="email" placeholder="ingrese su Email"> 
+                                    </div>
+                                </div>
+                                <div class="form-group row espacioregistro">
+                                    <div class="form-group col-sm-9">
+                                        <label for="direccion">Dirección</label>
+                                            <input type="text" class="form-control" id="direccion" placeholder="ingrese su Dirección"> 
+                                    </div>
+                                    <div class="form-group col-sm-3">
+                                            <label for="consulta">Departamento</label>
+                                            <select id="consulta" class="form-control">
+                                            <option selected>Artigas</option>
+                                            <option>Canelones</option>
+                                            <option>Cerro Largo</option>
+                                            <option>Colonia</option>
+                                            <option>Durazno</option>
+                                            <option>Flores</option>
+                                            <option>Florida</option>
+                                            <option>Lavalleja</option>
+                                            <option>Maldonado</option>
+                                            <option>Montevideo</option>
+                                            <option>Paysandú</option>
+                                            <option>Río Negro</option>
+                                            <option>Rivera</option>
+                                            <option>Rocha</option>
+                                            <option>Salto</option>
+                                            <option>San José</option>
+                                            <option>Soriano</option>
+                                            <option>Tacuarembó</option>
+                                            <option>treinta y tres</option>
+                                            </select>
+                                    </div>
+                                </div>
+                                <div class="form-group row espacioregistro">
+                                    <div class="form-group col-sm-6"> 
+                                        <label for="comentario">Cuantos días desea alquilar?</label>
+                                            <textarea id="comentario" class="form-control" rows="2"></textarea>
+                                    </div>
+                                    <div class="form group col-sm-6">
+                                        <p>¿piensa realizar un viaje al exterior con nuestro vehículo?</p>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                            <label class="form-check-label" for="inlineRadio1">si</label>
+                                          </div>
+                                          <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                            <label class="form-check-label" for="inlineRadio2">no</label>
+                                          </div>
+                                    </div>
+                                </div>
+                                <div class="form-group espacioregistro">
+                                    <label for="consulta"><ion-icon name="card-outline"></ion-icon> Tarjetas</label>
+                                    <select id="consulta" class="form-control">
+                                    <option selected>Visa</option>
+                                    <option>Mastercard</option>
+                                    <option>American Express</option>
+                                    <option>UnionPay</option>
+                                    <option>JCB</option>
+                                    <option>Diners Club</option>
+                                    </select>
+                                </div>
+                                <div class="form-group espacioregistro">
+                                    <div class="form-check ">
+                                        <input type="checkbox" class="form-check-input" id="TermYCond">
+                                        <label class="form-check-label" for="TermYCond">Estoy de acuerdo con los términos y condiciones</label>
+                                    </div>
+
+                                </div>
+    
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary" onclick="alert('reserva realizada')">Enviar reserva</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
     <footer>
